Add navbar button for all component

--- a/src/app/bibliotheque/bibliotheque.component.html
+++ b/src/app/bibliotheque/bibliotheque.component.html
@@ -1,1 +1,9 @@
-<h1 class="title">Bibliotheque de prix</h1>
+<div class="nav-container">
+  <div class="nav-title">
+<span class="nav-title" >Bibliotheque</span>
+  </div>
+  <div class="nav-button-group">
+    <a class="nav-button" >Composants</a>
+    <a class="nav-button" >Ouvrages</a>
+  </div>
+</div>
