--- a/src/app/clients/clients.component.html
+++ b/src/app/clients/clients.component.html
@@ -1,1 +1,8 @@
-<h1 class="title">Liste des clients</h1>
+<div class="nav-container">
+  <div class="nav-title">
+<span class="nav-title" >Liste des clients</span>
+  </div>
+  <div class="nav-button-group">
+    <a class="nav-button" >Ajouter un client</a>
+  </div>
+</div>
