--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,6 @@
-<h1 class="title">Dashboard</h1>
+<div class="nav-container">
+  <div class="nav-title">
+<span class="nav-title" >Tableau de bord</span>
+  </div>
+
+</div>
