--- a/src/app/devis/devis.component.html
+++ b/src/app/devis/devis.component.html
@@ -1,1 +1,10 @@
-<h1 class="title">Liste des devis</h1>
+<div class="nav-container">
+  <div class="nav-title">
+    <span class="title" >Liste des devis</span>
+  </div>
+  <div class="nav-button-group">
+    <a class="nav-button" >Créer un devis</a>
+  </div>
+</div>
+
+
