--- a/src/app/parametre/parametre.component.html
+++ b/src/app/parametre/parametre.component.html
@@ -1,1 +1,11 @@
-<h1 class="title">Paramètres</h1>
+
+<div class="nav-container">
+  <div class="nav-title">
+<span class="nav-title" >Parametres</span>
+  </div>
+  <div class="nav-button-group">
+    <a class="nav-button" >Entreprise</a>
+    <a class="nav-button">Utilisateurs</a>
+  </div>
+</div>
+
