--- a/src/styles.css
+++ b/src/styles.css
@@ -5,4 +5,96 @@
   box-sizing: border-box;
 }
 
+html, body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+nav {
+  background-color: #263238;
+  height: 63px;
+}
+
+.nav-title {
+  font-size: 1.568rem;
+  color: #f3f3f3;
+}
+
+.nav-container {
+  position: fixed;
+  top: 0;
+  left: 11rem;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  padding: 15px;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.nav-button {
+  padding: 0.6em 1.2em;
+  margin-right: 0.6em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 1;
+  border-radius: 16px;
+}
+
+.nav-button:before {
+  content: "";
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowingbn5 20s linear infinite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 16px;
+}
+
+@keyframes glowingbn5 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+.nav-button:active:after {
+  background: transparent;
+}
+
+.nav-button:hover:before {
+  opacity: 1;
+}
+
+.nav-button:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #191919;
+  left: 0;
+  top: 0;
+  border-radius: 15px;
+}
+
 /*# sourceMappingURL=styles.css.map */
