--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-sidebar (onToggleSidebar)="onToggleSidebar($event)">
-</app-sidebar>
+<app-sidebar (onToggleSidebar)="onToggleSidebar($event)"></app-sidebar>
+<nav>
+
+</nav>
 <router-outlet></router-outlet>
