--- a/src/app/clients/clients.component.css
+++ b/src/app/clients/clients.component.css
@@ -1,9 +1,9 @@
-* {
-  background-color: red;
-}
-
 .title {
-  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 5rem;
+  color: #f3f3f3;
+  padding: 10px;
 }
 
 /*# sourceMappingURL=clients.component.css.map */
