--- a/src/app/clients/clients.component.scss
+++ b/src/app/clients/clients.component.scss
@@ -1,6 +1,7 @@
-*{
-  background-color: red;
-}
 .title{
-  text-align: center;
+  position: fixed;
+  top: 0;
+  left: 5rem;
+  color: #f3f3f3;
+  padding: 10px;
 }
