add model, interface, controller, service for CLIENTS CRUD done for CLIENTS. POSTMAN ok

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
 <app-sidebar (onToggleSidebar)="onToggleSidebar($event)"></app-sidebar>
-<nav>
-
-</nav>
+<nav></nav>
 <router-outlet></router-outlet>
